* Updated pom.xml to enable access for the SQLite jdbcLoader